; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/cryptui/extr_main.c_cert_mgr_current_store.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/cryptui/extr_main.c_cert_mgr_current_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IDC_MGR_STORES = common dso_local global i32 0, align 4
@TCM_GETCURSEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @cert_mgr_current_store to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cert_mgr_current_store(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @IDC_MGR_STORES, align 4
  %6 = call i32 @GetDlgItem(i32 %4, i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @TCM_GETCURSEL, align 4
  %10 = call i32 @SendMessageW(i32 %8, i32 %9, i32 0, i32 0)
  %11 = call i32 @cert_mgr_index_to_store(i32 %7, i32 %10)
  ret i32 %11
}

declare dso_local i32 @GetDlgItem(i32, i32) #1

declare dso_local i32 @cert_mgr_index_to_store(i32, i32) #1

declare dso_local i32 @SendMessageW(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
